Better config file for advmenu

--- a/advance/configs/advmenu.rc
+++ b/advance/configs/advmenu.rc
@@ -2,6 +2,7 @@ device_joystick none
 device_keyboard svgalib
 emulator "advmame" advmame "advmame" ""
 emulator "uae" generic "/servers/uae/start.sh" "%f"
+emulator "c64" generic "/servers/vice/start.sh" "%f"
 device_video svgalib
 ui_font /servers/mame/fonts/iso01a-8x8.psf
 lock no
@@ -22,7 +23,18 @@ emulator_marquees "uae" "/servers/uae/mar"
 emulator_altss "uae" "/servers/uae/snap"
 uae/preview snap
 uae/sort name
-uae/mode list
+
+# C64 stuff
+
+emulator_roms "c64" "/servers/vice/roms"
+emulator_roms_filter "c64" ""
+emulator_flyers "c64" "/servers/vice/fly"
+emulator_cabinets "c64" "/servers/vice/cab"
+emulator_marquees "c64" "/servers/vice/mar"
+emulator_altss "c64" "/servers/vice/snap"
+c64/preview snap
+c64/sort name
+c64/mode list
 
 # pal
 # format H 0.8125 0.0257812 0.0734375 0.0882813
@@ -97,7 +109,7 @@ mode list
 sort group
 preview snap
 menu_base 0
-menu_rel 6
+menu_rel 14
 difficulty none
 display_orientation 
 device_video_clock 5-50 / 15.62 / 50
@@ -114,185 +126,20 @@ advmame/sort name
 advmame/mode list
 group_include "<undefined>"
 group_include "Amiga"
-group_include "BIOS"
-group_include "Bad"
-group_include "Ball & Paddle"
-group_include "Breakout"
-group_include "Breakout *Mature*"
-group_include "Casino"
-group_include "Casino *Mature*"
-group_include "Climbing"
-group_include "Driving"
-group_include "Driving / 1st Person"
-group_include "Driving / Boat"
-group_include "Driving / Race"
-group_include "Driving / Race (chase view)"
-group_include "Driving / Race (chase view) Bike"
-group_include "Driving / Race 1st P Bike"
-group_include "Driving / Race 1st Person"
-group_include "Driving / Race Bike"
-group_include "Driving / Race Track"
-group_include "Favoritos"
-group_include "Fighter / 2.5D"
-group_include "Fighter / 2D"
-group_include "Fighter / 3D"
-group_include "Fighter / Field"
-group_include "Fighter / Misc."
-group_include "Fighter / Multiplay"
-group_include "Fighter / Versus"
-group_include "Fighter / Versus *Mature*"
-group_include "Fighter / Versus Co-op"
-group_include "Fighter / Vertical"
-group_include "Good"
-group_include "Maze"
-group_include "Maze *Mature*"
-group_include "Maze / Digging"
-group_include "Maze / Digging *Mature*"
-group_include "Maze / Driving"
-group_include "Maze / Fighter"
-group_include "Maze / Outline"
-group_include "Maze / Outline *Mature*"
-group_include "Maze / Shooter Large"
-group_include "Maze / Shooter Small"
-group_include "Maze / Shooter Small *Mature*"
-group_include "Maze / Surround"
-group_include "Mini-Games"
-group_include "Misc."
-group_include "Misc. *Mature*"
-group_include "Misc. Betting"
-group_include "Misc. Betting *Mature*"
-group_include "Multiplay"
-group_include "Multiplay *Mature*"
-group_include "Pinball"
-group_include "Pinball *Mature*"
-group_include "Pinball / Pachinko *Mature*"
-group_include "Platform / Fighter"
-group_include "Platform / Fighter Scrolling"
-group_include "Platform / Run Jump"
-group_include "Platform / Run Jump *Mature*"
-group_include "Platform / Run Jump Scrolling"
-group_include "Platform / Shooter"
-group_include "Platform / Shooter Scrolling"
-group_include "Puzzle"
-group_include "Puzzle *Mature*"
-group_include "Puzzle / Cards"
-group_include "Puzzle / Cards *Mature*"
-group_include "Puzzle / Drop"
-group_include "Puzzle / Drop *Mature*"
-group_include "Puzzle / Match"
-group_include "Puzzle / Match *Mature*"
-group_include "Puzzle / Maze"
-group_include "Puzzle / Outline"
-group_include "Puzzle / Outline *Mature*"
-group_include "Puzzle / Sliding"
-group_include "Puzzle / Sliding *Mature*"
-group_include "Puzzle / Toss"
-group_include "Puzzle / Toss *Mature*"
-group_include "Quiz / Chinese"
-group_include "Quiz / English"
-group_include "Quiz / English *Mature*"
-group_include "Quiz / French"
-group_include "Quiz / Italian"
-group_include "Quiz / Japanese"
-group_include "Quiz / Japanese *Mature*"
-group_include "Quiz / Music English"
-group_include "Quiz / Music Japanese"
-group_include "Rhythm"
-group_include "Shooter / 1st Person"
-group_include "Shooter / 3rd Person"
-group_include "Shooter / Command"
-group_include "Shooter / Driving"
-group_include "Shooter / Driving (chase view)"
-group_include "Shooter / Driving 1st Person"
-group_include "Shooter / Driving Diagonal"
-group_include "Shooter / Driving Horizontal"
-group_include "Shooter / Driving Vertical"
-group_include "Shooter / Field"
-group_include "Shooter / Field *Mature*"
-group_include "Shooter / Flying"
-group_include "Shooter / Flying (chase view)"
-group_include "Shooter / Flying 1st Person"
-group_include "Shooter / Flying Diagonal"
-group_include "Shooter / Flying Horizontal"
-group_include "Shooter / Flying Horizontal *Mature*"
-group_include "Shooter / Flying Vertical"
-group_include "Shooter / Flying Vertical *Mature*"
-group_include "Shooter / Gallery"
-group_include "Shooter / Gallery *Mature*"
-group_include "Shooter / Gun"
-group_include "Shooter / Misc."
-group_include "Shooter / Misc. Horizontal"
-group_include "Shooter / Misc. Vertical"
-group_include "Shooter / Versus"
-group_include "Shooter / Walking"
-group_include "Sports"
-group_include "Sports / Armwrestling"
-group_include "Sports / Baseball"
-group_include "Sports / Basketball"
-group_include "Sports / Bowling"
-group_include "Sports / Boxing"
-group_include "Sports / Bull Fighting"
-group_include "Sports / Darts"
-group_include "Sports / Dodgeball"
-group_include "Sports / Fishing"
-group_include "Sports / Football Amer."
-group_include "Sports / Football Rugby"
-group_include "Sports / Golf"
-group_include "Sports / Hang Gliding"
-group_include "Sports / Hockey"
-group_include "Sports / Horse Racing"
-group_include "Sports / Horseshoes"
-group_include "Sports / Multiplay"
-group_include "Sports / Pool"
-group_include "Sports / Pool *Mature*"
-group_include "Sports / Shuffleboard"
-group_include "Sports / Skateboarding"
-group_include "Sports / Skiing"
-group_include "Sports / SkyDiving"
-group_include "Sports / Soccer"
-group_include "Sports / Sumo"
-group_include "Sports / Swimming"
-group_include "Sports / Tennis"
-group_include "Sports / Track & Field"
-group_include "Sports / Volleyball"
-group_include "Tabletop"
-group_include "Tabletop *Mature*"
-group_include "Tabletop / Hanafuda"
-group_include "Tabletop / Hanafuda *Mature*"
-group_include "Tabletop / Mahjong"
-group_include "Tabletop / Mahjong *Mature*"
-group_include "Tabletop / Othello"
-group_include "Tabletop / Othello *Mature*"
-group_include "Tabletop / Renju"
-group_include "Tabletop / Shougi"
-group_include "Unplayable"
-group_include "Very Good"
-group_include "Wrestling"
+group_include "Arcade"
+group_include "C64"
 type_include "<undefined>"
-type_include "Application"
-type_include "Arcade"
-type_include "Bet 'em Up"
-type_include "Breakout"
-type_include "Computer"
-type_include "Console"
-type_include "Fight"
-type_include "Filler"
-type_include "Flipper"
-type_include "Gun"
-type_include "Puzzle"
-type_include "RPG"
-type_include "Racing"
-type_include "Shot 'em Up"
-type_include "Sport"
 emulator_include "advmame"
 emulator_include "uae"
+emulator_include "c64"
 group "<undefined>"
 group "Amiga"
-group "Bad"
+group "Arcade"
 group "Ball & Paddle"
 group "BIOS"
 group "Breakout"
 group "Breakout *Mature*"
+group "C64"
 group "Casino"
 group "Casino *Mature*"
 group "Climbing"
@@ -306,7 +153,6 @@ group "Driving / Race 1st P Bike"
 group "Driving / Race 1st Person"
 group "Driving / Race Bike"
 group "Driving / Race Track"
-group "Favoritos"
 group "Fighter / 2.5D"
 group "Fighter / 2D"
 group "Fighter / 3D"
@@ -317,7 +163,6 @@ group "Fighter / Versus"
 group "Fighter / Versus *Mature*"
 group "Fighter / Versus Co-op"
 group "Fighter / Vertical"
-group "Good"
 group "Maze"
 group "Maze *Mature*"
 group "Maze / Digging"
@@ -440,24 +285,8 @@ group "Tabletop / Othello *Mature*"
 group "Tabletop / Renju"
 group "Tabletop / Shougi"
 group "Unplayable"
-group "Very Good"
 group "Wrestling"
 type "<undefined>"
-type "Application"
-type "Arcade"
-type "Bet 'em Up"
-type "Breakout"
-type "Computer"
-type "Console"
-type "Fight"
-type "Filler"
-type "Flipper"
-type "Gun"
-type "Puzzle"
-type "Racing"
-type "RPG"
-type "Shot 'em Up"
-type "Sport"
 emulator_attrib "advmame" missing exclude
 emulator_attrib "advmame" clone exclude
 emulator_attrib "advmame" bad exclude
@@ -467,186 +296,52 @@ emulator_attrib "advmame" neogeo include
 emulator_attrib "advmame" deco exclude
 emulator_attrib "advmame" playchoice exclude
 emulator_attrib "uae" missing exclude
-game "advmame/1943" "Favoritos" "" 4106 5 ""
-game "advmame/3in1semi" "" "" 227 1 ""
-game "advmame/3wonders" "" "" 330 1 ""
-game "advmame/720r3" "Favoritos" "" 0 0 ""
-game "advmame/arkangc" "" "" 1859 5 ""
-game "advmame/arkanoid" "Favoritos" "" 5277 13 ""
-game "advmame/arknoid2" "" "" 129 1 ""
-game "advmame/arknoidu" "" "" 250 1 ""
-game "advmame/arkretrn" "" "" 53 1 ""
-game "advmame/astrxeac" "" "" 110 1 ""
-game "advmame/atetris" "Favoritos" "" 559 2 ""
-game "advmame/beastrzb" "" "" 87 1 ""
-game "advmame/berlwall" "" "" 160 1 ""
-game "advmame/bionicc" "" "" 161 1 ""
-game "advmame/blkdrgon" "" "" 73 1 ""
-game "advmame/blmbycar" "" "" 118 2 ""
-game "advmame/blmbycau" "" "" 428 3 ""
-game "advmame/boblbobl" "" "" 33 2 ""
-game "advmame/bombjac2" "" "" 227 1 ""
-game "advmame/bombjack" "" "" 200 1 ""
-game "advmame/bombrman" "" "" 317 2 ""
-game "advmame/brkthru" "" "" 18 1 ""
-game "advmame/bublbobl" "Favoritos" "" 12406 18 ""
-game "advmame/cabal" "Favoritos" "" 424 3 ""
-game "advmame/cabal2" "" "" 161 1 ""
-game "advmame/cabalbl" "" "" 2642 1 ""
-game "advmame/cameltry" "" "" 280 1 ""
-game "advmame/camltrua" "" "" 621 1 ""
-game "advmame/chasehqj" "" "" 240 1 ""
-game "advmame/citycon" "" "" 570 2 ""
-game "advmame/countrnb" "" "" 14 1 ""
-game "advmame/crusnwld" "" "" 113 3 ""
-game "advmame/crzralla" "" "" 346 1 ""
-game "advmame/crzrally" "" "" 128 1 ""
-game "advmame/csprints" "" "" 0 1 ""
-game "advmame/ctrpllrp" "" "" 282 3 ""
-game "advmame/darkhors" "" "" 0 2 ""
-game "advmame/ddragon3" "" "" 103 2 ""
-game "advmame/ddragonb" "" "" 1822 1 ""
-game "advmame/ddragonu" "" "" 909 2 ""
-game "advmame/ddux1" "" "" 837 1 ""
-game "advmame/dfeveron" "" "" 3899 1 ""
-game "advmame/dino" "" "" 24 1 ""
-game "advmame/dinoj" "" "" 18 1 ""
-game "advmame/dirtfoxj" "" "" 61 2 ""
-game "advmame/drgnbowl" "" "" 32 1 ""
-game "advmame/drifto94" "" "" 2508 8 ""
-game "advmame/drivedge" "" "" 54 1 ""
-game "advmame/driveout" "" "" 127 1 ""
-game "advmame/edrandy1" "" "" 83 1 ""
-game "advmame/f1dream" "" "" 2406 1 ""
-game "advmame/f1gp" "" "" 903 2 ""
-game "advmame/fantland" "" "" 302 1 ""
-game "advmame/fghthist" "" "" 35 1 ""
-game "advmame/finalapd" "" "" 27 1 ""
-game "advmame/fshark" "" "" 438 2 ""
-game "advmame/fsharkbt" "" "" 103 1 ""
-game "advmame/fullthrl" "" "" 0 1 ""
-game "advmame/galaga" "Favoritos" "" 468 4 ""
-game "advmame/galaga3" "Favoritos" "" 433 3 ""
-game "advmame/gemini" "Favoritos" "" 725 2 ""
-game "advmame/gforce2" "" "" 128 1 ""
-game "advmame/ghouls" "" "" 476 2 ""
-game "advmame/ghoulsu" "" "" 580 1 ""
-game "advmame/gmgalax" "" "" 247 1 ""
-game "advmame/gng" "Favoritos" "" 7552 15 ""
-game "advmame/gtmr" "" "" 2568 16 ""
-game "advmame/gtmr2a" "" "" 221 1 ""
-game "advmame/gtmr2u" "" "" 481 3 ""
-game "advmame/gtmra" "Favoritos" "" 3716 8 ""
-game "advmame/gtmre" "" "" 228 1 ""
-game "advmame/gtmrusa" "" "" 8428 11 ""
-game "advmame/hangly" "" "" 13 1 ""
-game "advmame/hangly2" "" "" 170 1 ""
-game "advmame/joyman" "" "" 107 1 ""
-game "advmame/jumping" "" "" 180 1 ""
-game "advmame/kungfum" "" "" 232 1 ""
-game "advmame/ledstorm" "" "" 1113 3 ""
-game "advmame/marble" "" "" 1753 2 ""
-game "advmame/marble4" "" "" 232 1 ""
-game "advmame/marvlanj" "" "" 96 1 ""
-game "advmame/mcatadvj" "" "" 256 1 ""
-game "advmame/missb2" "" "" 228 1 ""
-game "advmame/mizubaku" "" "" 109 1 ""
-game "advmame/mnchmobl" "" "" 19 1 ""
-game "advmame/mooncrsg" "Favoritos" "" 465 3 ""
-game "advmame/moremore" "" "" 110 1 ""
-game "advmame/mp_soni2" "" "" 389 1 ""
-game "advmame/mp_sonic" "" "" 232 1 ""
-game "advmame/mpatrolw" "Favoritos" "" 1539 5 ""
-game "advmame/mspacman" "" "" 438 2 ""
-game "advmame/mspacmat" "" "" 247 1 ""
-game "advmame/nbapbp" "" "" 96 1 ""
-game "advmame/ncombat" "" "" 30 1 ""
-game "advmame/ncv1" "" "" 73 1 ""
-game "advmame/nemo" "" "" 161 1 ""
-game "advmame/neodrift" "" "" 1679 5 ""
-game "advmame/newpuc2" "" "" 200 1 ""
-game "advmame/newpuckx" "" "" 164 1 ""
-game "advmame/nrallyx" "" "" 729 1 ""
-game "advmame/nspirit" "" "" 431 1 ""
-game "advmame/offroad" "" "" 1517 1 ""
-game "advmame/orunneru" "" "" 263 1 ""
-game "advmame/outrun" "Favoritos" "" 93683 160 ""
-game "advmame/outrun1" "" "" 2236 2 ""
-game "advmame/outrunb" "" "" 5921 8 ""
-game "advmame/overdriv" "" "" 0 1 ""
-game "advmame/overtop" "" "" 111 1 ""
-game "advmame/pacheart" "" "" 3109 1 ""
-game "advmame/pacland" "Favoritos" "" 6305 12 ""
-game "advmame/pacman" "" "" 2371 4 ""
-game "advmame/pacmania" "" "" 1932 5 ""
-game "advmame/pang" "Favoritos" "" 2535 4 ""
-game "advmame/passshta" "" "" 105 1 ""
-game "advmame/pbactio2" "Pinball" "" 0 2 ""
-game "advmame/pbaction" "Favoritos" "" 76231 52 ""
-game "advmame/pbobble" "Favoritos" "" 10989 11 ""
-game "advmame/pbobble2" "" "" 0 1 ""
-game "advmame/pbobble3" "" "" 0 1 ""
-game "advmame/pbobble4" "" "" 220 1 ""
-game "advmame/pbobblen" "Favoritos" "" 857 4 ""
-game "advmame/pcktgal" "Favoritos" "" 9541 11 ""
-game "advmame/pdriftj" "" "" 219 1 ""
-game "advmame/pengo4" "" "" 97 1 ""
-game "advmame/pengob" "" "" 156 1 ""
-game "advmame/pignewta" "" "" 58 1 ""
-game "advmame/popeyebl" "" "" 190 1 ""
-game "advmame/popeyeu" "" "" 381 1 ""
-game "advmame/prikura" "" "" 549 2 ""
-game "advmame/promutra" "" "" 81 1 ""
-game "advmame/puckman" "" "" 181 1 ""
-game "advmame/puckmana" "" "" 12 1 ""
-game "advmame/quantum1" "" "" 287 1 ""
-game "advmame/rachero" "" "" 89 1 ""
-game "advmame/rainbow" "Favoritos" "" 30099 18 ""
-game "advmame/rainbowo" "" "" 419 1 ""
-game "advmame/rallybik" "" "" 752 1 ""
-game "advmame/rtype" "Favoritos" "" 2889 4 ""
-game "advmame/rtype2" "Favoritos" "" 1655 6 ""
-game "advmame/rungun" "" "" 48 2 ""
-game "advmame/runguna" "" "" 3477 4 ""
-game "advmame/rungunu" "" "" 25 1 ""
-game "advmame/rungunua" "" "" 109 2 ""
-game "advmame/sboblbob" "Favoritos" "" 28532 32 ""
-game "advmame/scia" "" "" 173 1 ""
-game "advmame/sgemf" "" "" 120 1 ""
-game "advmame/shangupb" "" "" 345 2 ""
-game "advmame/sharrirb" "" "" 113 1 ""
-game "advmame/shdance1" "" "" 465 1 ""
-game "advmame/shdancer" "Favoritos" "" 6448 12 ""
-game "advmame/shinobi" "Favoritos" "" 12518 18 ""
-game "advmame/shinobi1" "" "" 187 1 ""
-game "advmame/sidearms" "Favoritos" "" 1171 1 ""
-game "advmame/slmdunkj" "" "" 36 1 ""
-game "advmame/smgp" "" "" 109 1 ""
-game "advmame/smgpu" "" "" 47 1 ""
-game "advmame/spartanx" "" "" 373 1 ""
-game "advmame/starforc" "Favoritos" "" 3585 6 ""
-game "advmame/starfore" "Favoritos" "" 957 2 ""
-game "advmame/suprmanj" "" "" 122 1 ""
-game "advmame/taitogn" "" "" 21 1 ""
-game "advmame/tantr" "" "" 239 1 ""
-game "advmame/tehkanwc" "Favoritos" "" 15377 32 ""
-game "advmame/tenkomoj" "" "" 138 1 ""
-game "advmame/terracra" "Favoritos" "" 571 3 ""
-game "advmame/tondemo" "" "" 463 1 ""
-game "advmame/toutrun" "" "" 139 1 ""
-game "advmame/trally" "" "" 704 2 ""
-game "advmame/triviag2" "" "" 30 1 ""
-game "advmame/tturfu" "" "" 51 1 ""
-game "advmame/yiear2" "Favoritos" "" 400 2 ""
+emulator_attrib "c64" missing exclude
+game "advmame/1943" "Arcade" "" 4106 5 ""
+game "advmame/720r3" "Arcade" "" 0 0 ""
+game "advmame/arkanoid" "Arcade" "" 5277 13 ""
+game "advmame/atetris" "Arcade" "" 559 2 ""
+game "advmame/bublbobl" "Arcade" "" 12406 19 ""
+game "advmame/cabal" "Arcade" "" 424 3 ""
+game "advmame/galaga" "Arcade" "" 468 4 ""
+game "advmame/galaga3" "Arcade" "" 433 3 ""
+game "advmame/gemini" "Arcade" "" 725 2 ""
+game "advmame/gng" "Arcade" "" 7552 15 ""
+game "advmame/gtmra" "Arcade" "" 3716 8 ""
+game "advmame/mooncrsg" "Arcade" "" 465 3 ""
+game "advmame/mpatrolw" "Arcade" "" 1539 5 ""
+game "advmame/outrun" "Arcade" "" 93683 160 ""
+game "advmame/pacland" "Arcade" "" 6305 12 ""
+game "advmame/pang" "Arcade" "" 2535 4 ""
+game "advmame/pbactio2" "Arcade" "" 0 2 ""
+game "advmame/pbaction" "Arcade" "" 76231 53 ""
+game "advmame/pbobble" "Arcade" "" 10989 11 ""
+game "advmame/pbobblen" "Arcade" "" 857 4 ""
+game "advmame/pcktgal" "Arcade" "" 9541 11 ""
+game "advmame/rainbow" "Arcade" "" 30099 18 ""
+game "advmame/rtype" "Arcade" "" 2889 4 ""
+game "advmame/rtype2" "Arcade" "" 1655 6 ""
+game "advmame/sboblbob" "Arcade" "" 28532 32 ""
+game "advmame/shdancer" "Arcade" "" 6448 12 ""
+game "advmame/shinobi" "Arcade" "" 12518 18 ""
+game "advmame/sidearms" "Arcade" "" 1171 1 ""
+game "advmame/starforc" "Arcade" "" 3585 6 ""
+game "advmame/starfore" "Arcade" "" 957 2 ""
+game "advmame/tehkanwc" "Arcade" "" 15377 32 ""
+game "advmame/terracra" "Arcade" "" 571 3 ""
+game "advmame/yiear2" "Arcade" "" 400 2 ""
+game "c64/1942" "C64" "" 7571 0 "1942"
+game "c64/bubble_bobble" "C64" "" 1888 0 "Bubble Bobble"
+game "c64/giana_sisters" "C64" "" 806 0 "The Great Giana Sisters"
 game "uae/bubblebob" "Amiga" "" 3984 0 "Bubble Bobble"
 game "uae/chaosengine2" "Amiga" "" 636 0 "Chaos Engine 2"
 game "uae/deluxepacman" "Amiga" "" 6384 0 "Deluxe Pacman"
 game "uae/flashback" "Amiga" "" 6111 0 "Flashback"
 game "uae/pbdreams" "Amiga" "" 17459 0 "Pinball Dreams"
 game "uae/pbfantasies" "Amiga" "" 23226 0 "Pinball Fantasies"
-game "uae/projectx" "Amiga" "" 6707 0 "Project X"
+game "uae/projectx" "Amiga" "" 6717 0 "Project X"
 game "uae/superfrog" "Amiga" "" 7667 0 "Superfrog"
 game "uae/turrican" "Amiga" "" 4331 0 "Turrican"
 game "uae/turrican2" "Amiga" "" 4359 0 "Turrican 2"
 game "uae/turrican3" "Amiga" "" 6101 0 "Turrican 3"
-game "uae/worms" "Amiga" "" 7006 0 "Worms"
+game "uae/worms" "Amiga" "" 7023 0 "Worms"
