--- a/beaglebb/config/arcade_keymap.cfg
+++ b/beaglebb/config/arcade_keymap.cfg
@@ -8,34 +8,37 @@
 # https://raw.github.com/celso/arcade/master/docs/ipac_mappings.png
 # http://advancemame.sourceforge.net/doc-advmame.html#8.9.6
 #
-# to see the uae keycodes to write this file, check:
+# SDL keycodes here:
+# /usr/include/SDL/SDL_keysym.h
+#
+# Uae keycodes here:
 # https://raw.github.com/celso/arcade/master/docs/amigalayout.png
 #
 # syntax:
-# arcade_control_keyname,advmame_syntax,uae_keycode_value
+# arcade_control_keyname,advmame_syntax,uae_keycode_value,sdl_keycode_value
 
-arcade_p1_left,left,79
-arcade_p1_right,right,78
-arcade_p1_up,up,76
-arcade_p1_down,down,77
+arcade_p1_left,left,79,276
+arcade_p1_right,right,78,275
+arcade_p1_up,up,76,273
+arcade_p1_down,down,77,274
 
-arcade_p2_left,d,34
-arcade_p2_right,g,36
-arcade_p2_up,r,19
-arcade_p2_down,f,35
+arcade_p2_left,d,34,100
+arcade_p2_right,g,36,103
+arcade_p2_up,r,19,114
+arcade_p2_down,f,35,102
 
-arcade_p1_button1,lshift,96
-arcade_p1_button2,space,64
-arcade_p1_button3,lalt,100
-arcade_p1_button4,lcontrol,99
+arcade_p1_button1,lshift,96,304
+arcade_p1_button2,space,64,32
+arcade_p1_button3,lalt,100,308
+arcade_p1_button4,lcontrol,99,306
 
-arcade_p2_button1,w,17
-arcade_p2_button2,q,16
-arcade_p2_button3,s,33
-arcade_p2_button4,a,32
+arcade_p2_button1,w,17,119
+arcade_p2_button2,q,16,113
+arcade_p2_button3,s,33,115
+arcade_p2_button4,a,32,97
 
-arcade_p1_select,1,1
-arcade_p2_select,2,2
+arcade_p1_select,1,1,49
+arcade_p2_select,2,2,50
 
-arcade_lbutton,z,49
-arcade_rbutton,i,23
+arcade_lbutton,z,49,122
+arcade_rbutton,i,23,105
